# easy_workflow_demo

./: Cargo.toml  README.md  build.rs  client_config.json
certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  ext.cnf  openssl.cnf  server.crt  server.csr  server.key
src/proto/: service.proto
